Fix tabs on smaller devices + moz-fill

--- a/src/main/resources/static/styles/fragments.css
+++ b/src/main/resources/static/styles/fragments.css
@@ -86,7 +86,9 @@
 }
 
 .closebtn{
-    width: -webkit-fill-available;
+    width: -moz-available;          /* WebKit-based browsers will ignore this. */
+    width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
+    width: fill-available;
     text-align: right;
 }
 
@@ -368,8 +370,9 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: -webkit-fill-available;
-}
+    width: -moz-available;          /* WebKit-based browsers will ignore this. */
+    width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
+    width: fill-available;}
 
 .searchbarInputContainerMobile {
     display: flex;
@@ -379,8 +382,9 @@
     background-color: #E7E7ED;
     border-radius: 7px;
     border-width: 0;
-    width: -webkit-fill-available;
-}
+    width: -moz-available;          /* WebKit-based browsers will ignore this. */
+    width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
+    width: fill-available;}
 
 .hamburgerIcon {
     width: 24px;
@@ -397,7 +401,9 @@
     background-color: #ff000000;
     color: #8787A1;
     border: none;
-    width: -webkit-fill-available;
+    width: -moz-available;          /* WebKit-based browsers will ignore this. */
+    width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
+    width: fill-available;
 }
 
 input.searchbarMobile:focus {
