--- a/src/main/resources/static/styles/global.css
+++ b/src/main/resources/static/styles/global.css
@@ -100,6 +100,13 @@ body {
     color: black;
 }
 
+@media only screen and (max-width: 500px) {
+    .tab {
+        padding: 10px 10px !important;
+        font-size: 16px;
+    }
+}
+
 .tabSelected {
     border-bottom: 5px solid #8C69F4;
     color: #8C69F4;
